leptos_macro/tests/ui/view/expected_children_got_let_bind.rs
use leptos::*;

#[component]
fn Component(children: Children) -> impl IntoView {
    _ = children;
}

fn main() {
    view! {
        <Component let:a>
            <p />
        </Component>
    };
}
